add i18n to new modules

--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -16,5 +16,14 @@
     "few": "товара",
     "many": "товаров",
     "other": "товара"
-  }
+  },
+  "user.login": "Вход",
+  "user.logout": "Выход",
+  "profile.title":"Профиль",
+  "profile.name":"Имя",
+  "profile.phone":"Телефон",
+  "login.signin": "Вход",
+  "login.login": "Логин",
+  "login.password": "Пароль",
+  "login.button": "Войти"
 }
