--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -14,5 +14,14 @@
   "basket.articles": {
     "one": "article",
     "other": "articles"
-  }
+  },
+  "user.login": "Login",
+  "user.logout": "Logout",
+  "profile.title": "Profile",
+  "profile.name": "Name",
+  "profile.phone": "Phone",
+  "login.signin": "Sign in",
+  "login.login": "Login",
+  "login.password": "Password",
+  "login.button": "Signin"
 }
