--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -22,7 +22,7 @@
   "profile.title":"Профиль",
   "profile.name":"Имя",
   "profile.phone":"Телефон",
-  "login.signin": "Вход",
+  "login.title": "Вход",
   "login.login": "Логин",
   "login.password": "Пароль",
   "login.button": "Войти"
