--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -20,5 +20,13 @@
   "auth.password": "Password",
   "auth.signIn": "Sign in",
   "session.signIn": "Sign In",
-  "session.signOut": "Sign Out"
+  "session.signOut": "Sign Out",
+  "comment.title": "Comments",
+  "comment.reply": "Reply",
+  "comment.submit": "Submit",
+  "comment.cancel": "Cancel",
+  "comment.newReply": "New reply",
+  "comment.newComment": "New comment",
+  "comment.signIn": "SignIn",
+  "comment.signInTitle": " to comment"
 }
